--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Sacramento&display=swap");
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  /* color: rgba(255, 255, 255, 0.87); */
   background-color: #242424;
 
   font-synthesis: none;
@@ -13,7 +15,144 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-@media (prefers-color-scheme: light) {
+* {
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-family: "Sacramento", "serif";
+  background: rgb(254, 221, 221);
+  height: 100vh;
+  padding: 1rem;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+#logo {
+  max-height: 4rem;
+  max-width: 4rem;
+  border-radius: 50%;
+}
+
+a {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  text-decoration: none;
+  font-weight: 900;
+}
+
+#logo-link {
+  font-size: 1em;
+}
+
+.links {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+li {
+  list-style-type: none;
+}
+
+h1 {
+  text-align: center;
+  font-size: 2em;
+}
+
+.center-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.question-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 1.25rem;
+}
+
+.magic-eight-ball-container {
+  display: flex;
+  justify-content: center;
+}
+
+#magic-eight-ball {
+  height: 75%;
+  width: 75%;
+  border-radius: 100%;
+}
+
+.bottom-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 25%;
+  font-size: 1.5em;
+}
+
+label {
+  text-align: center;
+}
+
+.input-container {
+  display: flex;
+  justify-content: center;
+  gap: 0.5rem;
+  margin-top: 1rem;
+}
+
+#question {
+  height: 3.125rem;
+  width: 60%;
+  border-radius: 0.625rem;
+  border: none;
+}
+
+button {
+  border-radius: 0.625rem;
+  width: 20%;
+  border: 1px solid black;
+  background: white;
+  color: black;
+}
+
+button:hover {
+  background: black;
+  border: 1px solid white;
+  color: white;
+}
+
+#eightBallAnswer {
+  font-size: 1em;
+}
+
+h1 {
+  margin: 3.125rem 0 1.25rem 0;
+}
+
+.center-wrapper,
+.bottom-wrapper {
+  margin: 1.25rem 0 1.25rem 0;
+}
+
+@media (min-width: 37.5rem) {
+  #magic-eight-ball {
+    height: 25%;
+    width: 25%;
+    border-radius: 100%;
+  }
+}
+
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -24,4 +163,4 @@
   button {
     background-color: #f9f9f9;
   }
-}
+} */
