--- a/src/index.css
+++ b/src/index.css
@@ -152,7 +152,7 @@ h1 {
   }
 }
 
-/* @media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -163,4 +163,4 @@ h1 {
   button {
     background-color: #f9f9f9;
   }
-} */
+}
